--- a/resources/assets/less/item.less
+++ b/resources/assets/less/item.less
@@ -190,6 +190,7 @@
     .item-related {
         .product-item-related {
             opacity: 1;
+            margin-bottom: @padding-base-vertical;
             &.ng-enter-stagger, &.ng-leave-stagger, &.ng-move-stagger {
                 .transition-delay( .1s );
             }
